# Pron

./: LICENSE  README.md  l_docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/api/: urls.py
backend/config/: settings.py
backend/payment/: admin.py  models.py  permissions.py  serilizers.py  tasks.py  urls.py  views.py
backend/payment/management/commands/: add_mock_data.py  factory.py
nginx/: nginx.conf
