[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Симонов Алексей <alxxalxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
django = "4.2"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.27.1"
celery = "^5.3.6"
pillow = "^10.2.0"
drf-extra-fields = "^3.7.0"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
