[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Симонов Алексей <alxxalxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
django = "4.2"
redis = "^5.0.1"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.27.1"
celery = "^5.3.6"
pillow = "^10.2.0"
drf-extra-fields = "^3.7.0"
djoser = "^2.2.2"
djangorestframework-simplejwt = "^5.3.1"
factory-boy = "^3.3.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
